finalize method test and so on